--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,39 @@ section.search p {
 	text-align: right;
 }
 
+button {
+	background-color: #d3f7ff;
+	font-family: Gill Sans, sans-serif;
+	color: #1b5764;
+	border-color: #3e8d9e;
+	border-radius: 5px;
+}
+
+nav.topnav {
+	clear: both;
+	width: 1300px;
+	margin:0px auto;
+  overflow: hidden;
+  background-color: #a9cfd7;
+}
+nav.topnav a {
+  float: left;
+  display: block;
+  text-align: center;
+  padding: 20px 30px 20px;
+  text-decoration: none;
+  font-size: 20px;
+	color: #2b606c;
+}
+nav.topnav a:hover {
+  background-color: #c9f5ff;
+  color: #1b5764;
+}
+nav.topnav a.active {
+  background-color: #3e8e9f;
+  color: white;
+}
+
 h1 {
 	margin: 30px 0 20px;
 	text-indent: 90px;
@@ -64,6 +97,37 @@ article{
 	clear: both;
 	overflow: auto;
 	width: 100%;
+}
+
+ul {
+	float: left;
+	text-indent: 10px;
+	margin:10px auto 10px auto;
+}
+
+figure {
+	float: left;
+	width: 300px;
+	padding: 5px;
+	margin: 10px 20px 10px;
+	border: 1px solid #eeeeee;}
+figure img {
+	width: 300px;
+	height: 200px;
+}
+
+.showMore{
+	float: right;
+	margin-right: 10px;
+}
+.visit{
+	float: right;
+	margin-top: 10px;
+	margin-right: 10px;
+}
+
+.hidden {
+  display: none;
 }
 
 .pagination {
