--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,15 @@ section.contact {
 section.contact h1{
 	text-indent: -10px;
 }
+
+.contact a{
+	margin: 10px 20px 10px;
+	font-size: 18px;
+	text-decoration: none;
+}
+a:visited {
+	color: #459db1;
+}
+a:link {
+	color: #459db1;
+}
